--- a/frontend/spa-assemble-config.json
+++ b/frontend/spa-assemble-config.json
@@ -43,11 +43,12 @@
       "@openmrs/esm-system-admin-app": "next",
       "@openmrs/esm-user-onboarding-app": "next",
       "@openmrs/esm-ward-app": "next",
-      "@pucp-gidis-hiisc/esm-coststructure-app": "latest",
-      "@pucp-gidis-hiisc/esm-dyaku-app": "latest",
-      "@pucp-gidis-hiisc/esm-fua-app": "latest",
-      "@pucp-gidis-hiisc/esm-maternal-and-child-health-app": "latest",
-      "@pucp-gidis-hiisc/esm-sihsalus-consulta-externa-app": "latest"
+      "@pucp-gidis-hiisc/esm-coststructure-app": "next",
+      "@pucp-gidis-hiisc/esm-dyaku-app": "next",
+      "@pucp-gidis-hiisc/esm-fua-app": "next",
+      "@pucp-gidis-hiisc/esm-indicators-app": "next",
+      "@pucp-gidis-hiisc/esm-maternal-and-child-health-app": "next",
+      "@pucp-gidis-hiisc/esm-sihsalus-consulta-externa-app": "next"
     },
     "excludedFrontendModules": []
   }
