--- a/distro/pom.xml
+++ b/distro/pom.xml
@@ -27,7 +27,7 @@
          we do so here so that we can utilise Maven to track updates, etc. -->
     <openmrs.version>2.8.4</openmrs.version>
     <initializer.version>2.11.0-SNAPSHOT</initializer.version>
-    <fhir2.version>3.0.0-SNAPSHOT</fhir2.version>
+    <fhir2.version>3.0.0</fhir2.version>
     <webservices.rest.version>3.1.0</webservices.rest.version>
     <addresshierarchy.version>2.21.0</addresshierarchy.version>
     <patientdocuments.version>1.0.0</patientdocuments.version>
@@ -59,16 +59,6 @@
     <billing.version>2.0.0-SNAPSHOT</billing.version>
     <fua.version>1.0.47</fua.version>
     <sihsalus-interop.version>1.0.1</sihsalus-interop.version>
-    <!-- <imaging.version>1.1.5-SNAPSHOT</imaging.version> -->
-    <!-- <appframework.version>2.18.0</appframework.version>-->
-    <!-- UI Framework modules (required by imaging)-->
-    <!-- <appui.version>1.18.0</appui.version>-->
-    <!-- <uiframework.version>4.0.0</uiframework.version>-->
-    <!-- <uicommons.version>2.26.0</uicommons.version>-->
-    <!-- Content Packages -->
-    <!-- <datafilter.version>2.2.0</datafilter.version> -->
-    <!-- <oauth2login.version>1.6.0</oauth2login.version> -->
-    <!-- <vaccination-schedule.version>1.0.9</vaccination-schedule.version> -->
 
     <!-- Content Packages -->
     <sihsalus-content.version>1.8.7</sihsalus-content.version>
@@ -93,46 +83,6 @@
       <version>${sihsalus-interop.version}</version>
       <scope>provided</scope>
     </dependency>
-    <!-- Custom Module: Vaccination Schedule 
-    <dependency>
-      <groupId>org.openmrs.module</groupId>
-      <artifactId>vaccination-schedule-omod</artifactId>
-      <version>${vaccination-schedule.version}</version>
-    </dependency>
-    -->
-
-    <!-- Custom Module: Imaging
-    <dependency>
-      <groupId>org.openmrs.module</groupId>
-      <artifactId>imaging-omod</artifactId>
-      <version>${imaging.version}</version>
-    </dependency>
-    -->
-
-    <!-- UI Framework Modules (required by imaging) - COMMENTED OUT: Not needed for O3, causing
-    dependency conflicts -->
-    <!--
-    <dependency>
-      <groupId>org.openmrs.module</groupId>
-      <artifactId>appui-omod</artifactId>
-      <version>${appui.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.openmrs.module</groupId>
-      <artifactId>appframework-omod</artifactId>
-      <version>${appframework.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.openmrs.module</groupId>
-      <artifactId>uiframework-omod</artifactId>
-      <version>${uiframework.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.openmrs.module</groupId>
-      <artifactId>uicommons-omod</artifactId>
-      <version>${uicommons.version}</version>
-    </dependency>
-    -->
 
     <!-- Module dependencies -->
     <dependency>
@@ -201,14 +151,6 @@
       <version>${attachments.version}</version>
       <scope>provided</scope>
     </dependency>
-    <!-- Removed: creates demo locations (Amani Hospital, Site 1-50, etc.) and demo patients
-    <dependency>
-      <groupId>org.openmrs.module</groupId>
-      <artifactId>referencedemodata-omod</artifactId>
-      <version>${referencedemodata.version}</version>
-      <scope>provided</scope>
-    </dependency>
-    -->
     <dependency>
       <groupId>org.openmrs.module</groupId>
       <artifactId>queue-omod</artifactId>
@@ -305,54 +247,7 @@
       <version>${billing.version}</version>
       <scope>provided</scope>
     </dependency>
-    <!--<dependency>
-      <groupId>org.openmrs.module</groupId>
-      <artifactId>imaging-omod</artifactId>
-      <version>${imaging.version}</version>
-      <scope>provided</scope>
-    </dependency>-->
-    <!--
-    <dependency>
-      <groupId>org.openmrs.module</groupId>
-      <artifactId>appui-omod</artifactId>
-      <version>${appui.version}</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.openmrs.module</groupId>
-      <artifactId>appframework-omod</artifactId>
-      <version>${appframework.version}</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.openmrs.module</groupId>
-      <artifactId>uiframework-omod</artifactId>
-      <version>${uiframework.version}</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.openmrs.module</groupId>
-      <artifactId>uicommons-omod</artifactId>
-      <version>${uicommons.version}</version>
-      <scope>provided</scope>
-    </dependency>
-    -->
-    <!--
-    <dependency>
-      <groupId>org.openmrs.module</groupId>
-      <artifactId>datafilter-omod</artifactId>
-      <version>${datafilter.version}</version>
-      <scope>provided</scope>
-    </dependency>
-    -->
-    <!--
-    <dependency>
-      <groupId>org.openmrs.module</groupId>
-      <artifactId>oauth2login-omod</artifactId>
-      <version>${oauth2login.version}</version>
-      <scope>provided</scope>
-    </dependency>
-    -->
+
 
   </dependencies>
 
