--- a/docker-compose.fua.yml
+++ b/docker-compose.fua.yml
@@ -22,7 +22,7 @@ services:
     depends_on:
       - fua-generator-db
     healthcheck:
-      test: [ "CMD", "curl", "-f", "http://localhost:3000/health" ]
+      test: [ "CMD", "curl", "-f", "http://localhost:3000/" ]
       interval: 30s
       timeout: 10s
       retries: 3
