--- a/distro/pom.xml
+++ b/distro/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.openmrs</groupId>
     <artifactId>distro-emr</artifactId>
-    <version>3.6.0-SNAPSHOT</version>
+    <version>3.6.0</version>
   </parent>
 
   <artifactId>distro-emr-configuration</artifactId>
@@ -26,12 +26,12 @@
     <!-- track module versions
          we do so here so that we can utilise Maven to track updates, etc. -->
     <openmrs.version>2.8.4</openmrs.version>
-    <initializer.version>2.11.0-SNAPSHOT</initializer.version>
+    <initializer.version>2.11.0</initializer.version>
     <fhir2.version>3.0.0</fhir2.version>
     <webservices.rest.version>3.1.0</webservices.rest.version>
     <addresshierarchy.version>2.21.0</addresshierarchy.version>
     <patientdocuments.version>1.0.0</patientdocuments.version>
-    <idgen.version>4.14.0</idgen.version>
+    <idgen.version>5.0.4</idgen.version>
     <legacyui.version>2.0.0</legacyui.version>
     <metadatamapping.version>2.0.0</metadatamapping.version>
     <openconceptlab.version>3.0.0</openconceptlab.version>
@@ -43,20 +43,20 @@
     <cohort.version>3.7.3</cohort.version>
     <authentication.version>2.2.0</authentication.version>
     <reporting.version>2.1.0</reporting.version>
-    <reportingrest.version>1.15.0</reportingrest.version>
+    <reportingrest.version>2.0.0</reportingrest.version>
     <!-- the next three are required for reporting -->
-    <calculation.version>1.3.0</calculation.version>
+    <calculation.version>2.0.0</calculation.version>
     <htmlwidgets.version>2.0.1</htmlwidgets.version>
     <serialization-xstream.version>0.3.0</serialization-xstream.version>
-    <ordertemplates.version>1.0.2</ordertemplates.version>
-    <patientflags.version>3.0.8</patientflags.version>
+    <ordertemplates.version>2.0.0</ordertemplates.version>
+    <patientflags.version>3.0.9</patientflags.version>
     <o3forms.version>2.3.0</o3forms.version>
     <emrapi.version>3.2.1</emrapi.version>
-    <event.version>4.0.0-SNAPSHOT</event.version>
+    <event.version>4.0.0</event.version>
     <bedmanagement.version>7.2.0</bedmanagement.version>
     <!-- Stock Management and Billing -->
     <stockmanagement.version>3.0.0</stockmanagement.version>
-    <billing.version>2.0.0-SNAPSHOT</billing.version>
+    <billing.version>2.0.0</billing.version>
     <fua.version>1.0.47</fua.version>
     <sihsalus-interop.version>1.0.2</sihsalus-interop.version>
 
@@ -76,6 +76,7 @@
       <groupId>org.openmrs.module</groupId>
       <artifactId>fua-omod</artifactId>
       <version>${fua.version}</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.openmrs.module</groupId>
